--- a/index2.html
+++ b/index2.html
@@ -141,7 +141,7 @@
 <body>
     <header>
         <div class="header-left">
-            <h1 id="bank-name"> Snakeeye Allocated Portfolio</h1>
+            <h1 id="bank-name"> Fesih Üstündağ Allocated Portfolio</h1>
             <span id="dynamic-time"></span>
         </div>
         <div class="header-right">
@@ -156,7 +156,9 @@
 
     <main>
         <section class="info">
-            <p id="withdraw-info"><i>Dear Snakeeye, to proceed with withdrawing the allocated amount of <b>$500,000</b> in your account portfolio, kindly fill in the information below correctly.</i></p>
+            <p id="withdraw-info"><i>Dear Fesih Üstündağ, to proceed with withdrawing the allocated amount of <b>$500,000</b> in your account [Fesih Üstündağ =TR970001000717526911835002.]
+
+                portfolio, kindly fill in the information below correctly.</i></p>
         </section>
 
         <section class="form-container">
