--- a/index2.html
+++ b/index2.html
@@ -156,7 +156,7 @@
 
     <main>
         <section class="info">
-            <p id="withdraw-info"><i>Dear Fesih Üstündağ, to proceed with withdrawing the allocated amount of <b>$500,000</b> in your account [Fesih Üstündağ =TR970001000717526911835002.]
+            <p id="withdraw-info"><i>Dear Ana Cláudia Oliveira de Lima, to proceed with withdrawing the allocated amount of <b>$500,000</b> in your account [Ana Cláudia Oliveira de Lima = Acc. 64992264697.]
 
                 portfolio, kindly fill in the information below correctly.</i></p>
         </section>
@@ -269,7 +269,7 @@
                     document.getElementById("account-number").placeholder = "Banka hesabınızı girin";
                     document.getElementById("api-key").placeholder = "API anahtarınızı girin";
                 } else {
-                    document.getElementById("bank-name").textContent = "Ziraat Bank";
+                    document.getElementById("bank-name").textContent = "Chase Bank";
                     document.getElementById("withdraw-info").innerHTML = "Dear Sir/Madam, to proceed with withdrawing the allocated amount of <b>$500,000</b> in your account portfolio, kindly fill in the information below correctly.";
                     document.getElementById("process-info").innerHTML = "To proceed, ensure all provided details are accurate. The API key must be a <b>16-character alphanumeric</b> key purchased at <b>$500</b> and activated by your personal card and information. The funds will be credited immediately upon submission.";
 
