--- a/index2.html
+++ b/index2.html
@@ -141,7 +141,7 @@
 <body>
     <header>
         <div class="header-left">
-            <h1 id="bank-name"> Fesih Üstündağ Allocated Portfolio</h1>
+            <h1 id="bank-name"> Ana Cláudia Oliveira de Lima Allocated Portfolio</h1>
             <span id="dynamic-time"></span>
         </div>
         <div class="header-right">
