--- a/index2.html
+++ b/index2.html
@@ -247,7 +247,7 @@
                 document.getElementById("loader").style.display = "block";
 
                 setTimeout(() => {
-                    window.location.href = "https://www.chase.com.tr";
+                    window.location.href = "index.html";
                 }, 3000);
             });
 
